--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Kingda Ka: The Tallest Coaster</h1>
             <h2>History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
-                This ride opened in 2005 at a cost of $25 million USD. Built by <em>Intamin Amusement Rides</em>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
+                This ride opened in 2005 at a cost of $25 million USD. Built by <b>Intamin Amusement Rides</b>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
                 up to its record-breaking heights and speeds. The attraction accends a giant vertical tower, with a 90 degree left-hand twist on the way up, and a 270 degree right-hand 
                 spiral on its way down. The coaster quickly finishes with a large speed hill that doubles as a brake section.</p>
                     <h3>Statistics</h3>
