--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                             <li>Tallest Height on a Roller Coaster at 456ft: 2005-Present</li>
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
+<br /> 
+<p> Much of the facts and figures come from the <a href="https://rcdb.com/2832.htm">Roller Coaster Database page for Kingda Ka.</a></p>        
+                    
                         </ul>
     </body>
 </html>
