--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
 <br /> 
-<p> Much of the facts and figures come from the <a href="https://rcdb.com/2832.htm">Roller Coaster Database page for Kingda Ka.</a></p>        
+<p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>        
                     
                         </ul>
     </body>
