--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <li>Length: 3,118ft/950.4m</li>
                             <li>Speed: 128mph/206kph <i>in 3.5 seconds</i></li>
                             <li>Maximum Vertical Angle: 90 degrees</li>
-                            <li>Duration: 28 seconds</li>
+                            <li>Duration: 50 seconds</li>
                         </ul>
             <h2>Records & Reception</h2>
                 <p>This attraction opened with three world records. <i>Kingda Ka</i> took the world height, drop, and speed records from another Intamin hydraulic launch coaster that opened two years prior:
@@ -32,7 +32,8 @@
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
 <br /> 
-<p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>        
+<p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
+<p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>        
                     
                         </ul>
     </body>
