--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                             <li>Tallest Height on a Roller Coaster at 456ft: 2005-Present</li>
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
+            <h2><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
+            
 <br /> 
 <p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
 <p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>        
