--- a/index.html
+++ b/index.html
@@ -31,9 +31,39 @@
                             <li>Tallest Height on a Roller Coaster at 456ft: 2005-Present</li>
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
-            <h2><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
-            
 <br /> 
+<h2><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
+<table>
+    <tr> 
+        <th>Year</th>
+        <th>2005</th>
+        <th>2006</th>
+        <th>2007</th>
+        <th>2008</th>
+        <th>2009</th>
+        <th>2010</th>
+        <th>2011</th>
+        <th>2012</th>
+        <th>2013</th>
+        <th>2014</th>
+        <th>2015</th>
+    </tr>
+    <tr>
+        <th>Rank</th>
+        <td>42</td>
+        <td>28</td>
+        <td>31</td>
+        <td>25</td>
+        <td>31</td>
+        <td>27 (tie)</td>
+        <td>33</td>
+        <td>38</td>
+        <td>35 (tie)</td>
+        <td>45</td>
+        <td>49</td>
+    </tr>
+</table>
+
 <p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
 <p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>        
                     
