--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Kingda Ka: The Tallest Coaster</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
             <h2>History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
                 This ride opened in 2005 at a cost of $25 million USD. Built by <b>Intamin Amusement Rides</b>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
