--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Kingda Ka: The Tallest Coaster</h1>
         <img width=600 height=450 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
+        <p>Image by: <a href="https://en.wikipedia.org/wiki/User:Coasterman1234">Coasterman1234</a> at English Wikipedia</p>
             <h2>History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
                 This ride opened in 2005 at a cost of $25 million USD. Built by <b>Intamin Amusement Rides</b>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
