--- a/css01a.html
+++ b/css01a.html
@@ -4,17 +4,22 @@
         <title>
             Kingda Ka: The Tallest Coaster
         </title>
+        <style> 
+        </style>
     </head>
     <body>
-        <h1>Kingda Ka: The Tallest Coaster</h1>
+        <div id="Page Title" class="container">
+        <h1 class="header">Kingda Ka: The Tallest Coaster</h1>
         <img width=600 height=450 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
         <p>Image by: <a href="https://en.wikipedia.org/wiki/User:Coasterman1234">Coasterman1234</a> at English Wikipedia</p>
-            <h2>History</h2>
+        </div>
+        <div id="Main Info" class="container">
+            <h2 class="header">History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
                 This ride opened in 2005 at a cost of $25 million USD. Built by <b>Intamin Amusement Rides</b>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
                 up to its record-breaking heights and speeds. The attraction accends a giant vertical tower, with a 90 degree left-hand twist on the way up, and a 270 degree right-hand
                 spiral on its way down. The coaster quickly finishes with a large speed hill that doubles as a brake section.</p>
-                    <h3>Statistics</h3>
+                    <h3 class="header">Statistics</h3>
                         <ul>
                             <li>Maximum Height: 456ft/139m</li>
                             <li>Maximum Drop: 418ft/127.4m</li>
@@ -23,17 +28,20 @@
                             <li>Maximum Vertical Angle: 90 degrees</li>
                             <li>Duration: 50 seconds</li>
                         </ul>
-            <h2>Records & Reception</h2>
+            <h2 class="header">Records & Reception</h2>
                 <p>This attraction opened with three world records. <i>Kingda Ka</i> took the world height, drop, and speed records from another Intamin hydraulic launch coaster that opened two years prior:
                     <i>Top Thrill Dragster</i> at Sandusky, Ohio's <B>Cedar Point</B>. The record-breaking coaster actually sparked controversy amongst roller coaster enthusiats when it was announced in 2004,
                     as the ride's layout is extremely similar to its Ohioan predecessor, just with slighly boosted stats and changing <i>Top Thrill's</i> flat braking runout to a 129ft tall speed/braking hill. Contoversial
                     or not, <i>Kingda Ka</i> remains an impressive feat of engineering, and though it has since lost its speed record, it doesn't look like its impressive height record will be beat anytime soon.</p>
-                    <h3>World Records</h3>
+                    <h3 class="header">World Records</h3>
                         <ul>
                             <li>Tallest Height on a Roller Coaster at 456ft: 2005-Present</li>
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
-<h2><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
+                        </ul>
+            </div>
+            <div id="Table" class="container">
+<h2 class="header"><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
 <table>
     <tr> 
         <th>Year</th>
@@ -64,10 +72,10 @@
         <td>49</td>
     </tr>
 </table>
-
+            </div>
+            <div id="Sub Info" class="container">
 <p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
-<p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>        
-                    
-                        </ul>
-    </body>
+<p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
+            </div>
+</body>
 </html>
