--- a/css01a.html
+++ b/css01a.html
@@ -10,9 +10,13 @@
     <body>
         <div id="Page Title" class="container">
         <h1 class="header">Kingda Ka: The Tallest Coaster</h1>
+        </div>
+        
+        <div id="Image" class="container">
         <img width=600 height=450 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
         <p>Image by: <a href="https://en.wikipedia.org/wiki/User:Coasterman1234">Coasterman1234</a> at English Wikipedia</p>
         </div>
+
         <div id="Main Info" class="container">
             <h2 class="header">History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
@@ -40,6 +44,7 @@
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
                         </ul>
             </div>
+
             <div id="Table" class="container">
 <h2 class="header"><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
 <table>
@@ -73,6 +78,7 @@
     </tr>
 </table>
             </div>
+            
             <div id="Sub Info" class="container">
 <p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
 <p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
