--- a/css01a.html
+++ b/css01a.html
@@ -5,10 +5,14 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
+        p {font-family: serif; font-size: 14px;}
+        h1, h2, h3 {font-family: serif;}
+        .container {display: flex; flex-flow: wrap;}
+        #PageTitle {background-color: forestgreen; color: mediumturquoise;}
         </style>
     </head>
     <body>
-        <div id="Page Title" class="container">
+        <div id="PageTitle" class="container">
         <h1 class="header">Kingda Ka: The Tallest Coaster</h1>
         </div>
         
@@ -78,7 +82,7 @@
     </tr>
 </table>
             </div>
-            
+
             <div id="Sub Info" class="container">
 <p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
 <p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
