--- a/css01a.html
+++ b/css01a.html
@@ -5,13 +5,14 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family: serif; font-size: 14px;}
+        p {font-family: serif; font-size: 16px;}
         h1, h2, h3 {font-family: serif;}
-        .container {display: flex; flex-flow: wrap;}
+        .container {display: flex; flex-direction: row;}
         #PageTitle {background-color: forestgreen; color: mediumturquoise; text-align: center;}
         </style>
     </head>
     <body>
+        <div id="DivBox">
         <div id="PageTitle" class="container">
         <h1 class="header">Kingda Ka: The Tallest Coaster</h1>
         </div>
@@ -19,10 +20,10 @@
         <div id="Image" class="container">
         <img width=600 height=450 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
         </div>
-        
+
         <p>Image by: <a href="https://en.wikipedia.org/wiki/User:Coasterman1234">Coasterman1234</a> at English Wikipedia</p>
         
-        <div id="Main Info" class="container">
+        <div id="MainInfo" class="container">
             <h2 class="header">History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
                 This ride opened in 2005 at a cost of $25 million USD. Built by <b>Intamin Amusement Rides</b>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
@@ -84,9 +85,10 @@
 </table>
             </div>
 
-            <div id="Sub Info" class="container">
+            <div id="SubInfo" class="container">
 <p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
 <p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
             </div>
+        </div>
 </body>
 </html>
