--- a/css01a.html
+++ b/css01a.html
@@ -7,7 +7,7 @@
         <style> 
         p {font-family: serif; font-size: 16px;}
         h1, h2, h3 {font-family: serif;}
-        #PageTitle {background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border: 1px;}
+        #PageTitle {background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border: 3px; border-color: midnightblue;}
         </style>
     </head>
     <body>
