--- a/css01a.html
+++ b/css01a.html
@@ -5,11 +5,11 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family: serif; font-size: 16px;}
+        p {font-family: serif; font-size: 16pt;}
         h1, h2, h3 {font-family: serif;}
-        #PageTitle {background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border: 5px; padding: 10px;}
-        #DivBox {background-color: azure;}
-        .container {padding: 10px;}
+        #PageTitle {font-size-adjust: 20pt; background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border: 4pt; border-color: black; padding: 7pt;}
+        #DivBox {background-color: azure; display: flex; flex-direction: column; flex-wrap: wrap;}
+        .container {padding: 10pt; border: 3pt; border-color: black; margin: 2pt;}
         </style>
     </head>
     <body>
