--- a/css01a.html
+++ b/css01a.html
@@ -22,8 +22,10 @@
         <img width=600 height=450 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
         </div>
 
+        <div id="ImageCaption" class="container">
         <p>Image by: <a href="https://en.wikipedia.org/wiki/User:Coasterman1234">Coasterman1234</a> at English Wikipedia</p>
-        
+        </div>
+
         <div id="MainInfo" class="container">
             <h2 class="header">History</h2>
                 <p><i>Kingda Ka</i> is a roller coaster located at Jackson, New Jersey's <b>Six Flags Great Adventure</b>, conveniently found between New York City and Philadelphia.
