--- a/css01a.html
+++ b/css01a.html
@@ -9,7 +9,12 @@
         h1, h2, h3 {font-family: serif;}
         #PageTitle {font-size-adjust: 20pt; background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border: 4pt; border-color: black; padding: 7pt;}
         #DivBox {background-color: azure; display: flex; flex-direction: column; flex-wrap: wrap;}
-        .container {padding: 10pt; border: 3pt; border-color: black; margin: 2pt;}
+        .container {padding: 10pt;}
+        #Image {border: 3pt; border-color: black; margin: 2pt;}
+        #ImageCaption {border: 3pt; border-color: black; margin: 2pt;}
+        #MainInfo {border: 3pt; border-color: black; margin: 2pt;}
+        #Table {border: 3pt; border-color: black; margin: 2pt;}
+        #SubInfo {border: 3pt; border-color: black; margin: 2pt;}
         </style>
     </head>
     <body>
