--- a/css01a.html
+++ b/css01a.html
@@ -7,14 +7,14 @@
         <style> 
         p {font-family: serif; font-size: 16pt;}
         h1, h2, h3 {font-family: serif;}
-        #PageTitle {font-size-adjust: 20pt; background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border: 4pt; border-color: black; padding: 7pt;}
+        #PageTitle {font-size-adjust: 20pt; background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border-width: 4pt; border-color: black; padding: 7pt;}
         #DivBox {background-color: azure; display: flex; flex-direction: column; flex-wrap: wrap;}
         .container {padding: 10pt;}
-        #Image {border: 3pt; border-color: black; margin: 2pt;}
-        #ImageCaption {border: 3pt; border-color: black; margin: 2pt;}
-        #MainInfo {border: 3pt; border-color: black; margin: 2pt;}
-        #Table {border: 3pt; border-color: black; margin: 2pt;}
-        #SubInfo {border: 3pt; border-color: black; margin: 2pt;}
+        #Image {border-width: 3pt; border-color: black; margin: 2pt;}
+        #ImageCaption {border-width: 3pt; border-color: black; margin: 2pt;}
+        #MainInfo {border-width: 3pt; border-color: black; margin: 2pt;}
+        #Table {border-width: 3pt; border-color: black; margin: 2pt;}
+        #SubInfo {border-width: 3pt; border-color: black; margin: 2pt;}
         </style>
     </head>
     <body>
