--- a/css01a.html
+++ b/css01a.html
@@ -6,10 +6,25 @@
         </title>
         <style> 
         p {font-family: serif; font-size: 16pt;}
+
         h1, h2, h3 {font-family: serif;}
-        #PageTitle {font-size-adjust: 20pt; background-color: forestgreen; color: rgb(29, 179, 174); text-align: center; border-width: 4pt; border-color: black; padding: 7pt;}
-        #DivBox {background-color: azure; display: flex; flex-direction: column; flex-wrap: wrap;}
-        .container {padding: 10pt; border-width: 3pt; border-color: black; margin: 2pt;}
+
+        #PageTitle {font-size-adjust: 20pt; 
+                background-color: forestgreen; 
+                color: rgb(29, 179, 174); 
+                text-align: center; 
+                border-width: 4pt; 
+                border-color: black; 
+                padding: 7pt;}
+
+        #DivBox {background-color: azure; 
+                display: flex; 
+                flex-direction: column; 
+                flex-wrap: wrap;}
+
+        .container {padding: 10pt; 
+                    border: 3pt solid black;  
+                    margin: 2pt;}
         </style>
     </head>
     <body>
