--- a/css01a.html
+++ b/css01a.html
@@ -25,6 +25,9 @@
         .container {padding: 10pt; 
                     border: 2pt solid black;  
                     margin: 2pt;}
+
+        #Image {align-content: center;}
+
         </style>
     </head>
     <body>
