--- a/css01a.html
+++ b/css01a.html
@@ -26,7 +26,7 @@
                     border: 2pt solid black;  
                     margin: 2pt;}
 
-        #Image {align-content: center;}
+        #Image {align-items: center;}
 
         </style>
     </head>
