--- a/css01a.html
+++ b/css01a.html
@@ -11,7 +11,7 @@
 
         #PageTitle {font-size-adjust: 20pt; 
                 background-color: forestgreen; 
-                color: darkturquoise); 
+                color: darkturquoise; 
                 text-align: center; 
                 border-width: 3pt; 
                 border-color: black; 
