--- a/css01b.html
+++ b/css01b.html
@@ -10,16 +10,16 @@
         h1, h2, h3 {font-family: serif;}
 
         #PageTitle {font-size-adjust: 20pt; 
-                background-color: forestgreen; 
-                color: darkturquoise; 
+                background-color: rgb(11, 7, 51); 
+                color:blanchedalmond; 
                 text-align: center; 
                 border-width: 3pt; 
                 border-color: black; 
                 padding: 4pt;}
 
-        #DivBox {background-color: azure; 
+        #DivBox {background-color:slategrey; 
                 display: flex; 
-                flex-direction: column; 
+                flex-direction: row; 
                 flex-wrap: wrap;}
 
         .container {padding: 10pt; 
