--- a/css01b.html
+++ b/css01b.html
@@ -13,8 +13,8 @@
                 background-color: rgb(11, 7, 51); 
                 color:blanchedalmond; 
                 text-align: center; 
-                border-width: 3pt; 
-                border-color: black; 
+                border-width: 2pt; 
+                border-color: tan; 
                 padding: 4pt;}
 
         #DivBox {background-color:slategrey; 
@@ -23,7 +23,7 @@
                 flex-wrap: wrap;}
 
         .container {padding: 10pt; 
-                    border: 2pt solid black;  
+                    border: 2pt solid tan;  
                     margin: 2pt;}
 
         </style>
