--- a/css01b.html
+++ b/css01b.html
@@ -5,9 +5,9 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family: serif; font-size: 16pt;}
+        p {font-family: serif; font-size: 16pt; color: whitesmoke;}
 
-        h1, h2, h3 {font-family: serif;}
+        h1, h2, h3 {font-family: serif; color: whitesmoke;}
 
         #PageTitle {font-size-adjust: 20pt; 
                 background-color: rgb(11, 7, 51); 
