--- a/css01b.html
+++ b/css01b.html
@@ -7,14 +7,16 @@
         <style> 
         p {font-family: serif; font-size: 16pt; color: whitesmoke;}
 
+        p li {color: whitesmoke;}
+
         h1, h2, h3 {font-family: serif; color: whitesmoke;}
 
         #PageTitle {font-size-adjust: 20pt; 
                 background-color: rgb(11, 7, 51); 
-                color:blanchedalmond; 
+                color: whitesmoke; 
                 text-align: center; 
                 border-width: 2pt; 
-                border-color: tan; 
+                border-color:black; 
                 padding: 4pt;}
 
         #DivBox {background-color:slategrey; 
@@ -23,7 +25,7 @@
                 flex-wrap: wrap;}
 
         .container {padding: 10pt; 
-                    border: 2pt solid tan;  
+                    border: 2pt solid black;  
                     margin: 2pt;}
 
         </style>
