--- a/css01b.html
+++ b/css01b.html
@@ -7,7 +7,7 @@
         <style> 
         p {font-family: serif; font-size: 16pt; color: whitesmoke;}
 
-        p li {color: whitesmoke;}
+        p ul {color: whitesmoke;}
 
         h1, h2, h3 {font-family: serif; color: whitesmoke;}
 
