--- a/css01b.html
+++ b/css01b.html
@@ -12,7 +12,7 @@
         h1, h2, h3 {font-family: serif; color: whitesmoke;}
 
         #PageTitle {font-size-adjust: 20pt; 
-                background-color: rgb(11, 7, 51); 
+                background-color: midnightblue; 
                 color: whitesmoke; 
                 text-align: center; 
                 border-width: 2pt; 
