--- a/css01b.html
+++ b/css01b.html
@@ -7,9 +7,9 @@
         <style> 
         p {font-family: serif; font-size: 16pt; color: whitesmoke;}
 
-        p ul li {color: whitesmoke;}
-
         h1, h2, h3 {font-family: serif; color: whitesmoke;}
+
+        #table {border-style: groove;}
 
         #PageTitle {font-size-adjust: 20pt; 
                 background-color: midnightblue; 
