--- a/css01b.html
+++ b/css01b.html
@@ -71,6 +71,7 @@
 
             <div id="Table" class="container">
 <h2 class="header"><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
+<div id="TableActual" class="container">
 <table>
     <tr> 
         <th>Year</th>
@@ -101,6 +102,7 @@
         <td>49</td>
     </tr>
 </table>
+        </div>
             </div>
 
             <div id="SubInfo" class="container">
