--- a/css01b.html
+++ b/css01b.html
@@ -9,7 +9,7 @@
 
         h1, h2, h3 {font-family: serif; color: whitesmoke;}
 
-        #table {border-style: groove;}
+        #TableActual {border-style: groove;}
 
         #PageTitle {font-size-adjust: 20pt; 
                 background-color: midnightblue; 
