--- a/css01c.html
+++ b/css01c.html
@@ -5,26 +5,26 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family: serif; font-size: 16pt;}
+        p {font-family: serif; font-size: 16pt; color: whitesmoke;}
 
-        h1, h2, h3 {font-family: serif;}
+        h1, h2, h3 {font-family: serif; color: whitesmoke;}
 
         #PageTitle {font-size-adjust: 20pt; 
-                background-color: forestgreen; 
-                color: darkturquoise; 
-                text-align: center; 
-                border-width: 3pt; 
-                border-color: black; 
-                padding: 4pt;}
+        background-color: midnightblue; 
+        color: whitesmoke; 
+        text-align: center; 
+        border-width: 2pt; 
+        border-color:black; 
+        padding: 4pt;}
 
-        #DivBox {background-color: azure; 
-                display: flex; 
-                flex-direction: column; 
-                flex-wrap: wrap;}
+        #DivBox {background-color:slategrey; 
+        display: flex; 
+        flex-direction: column; 
+        flex-wrap: wrap;}
 
         .container {padding: 10pt; 
-                    border: 2pt solid black;  
-                    margin: 2pt;}
+            border: 2pt solid black;  
+            margin: 2pt;}
 
         </style>
     </head>
