--- a/css01c.html
+++ b/css01c.html
@@ -5,19 +5,19 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family: serif; font-size: 16pt; color: whitesmoke;}
+        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: whitesmoke;}
 
-        h1, h2, h3 {font-family: serif; color: whitesmoke;}
+        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: whitesmoke;}
 
         #PageTitle {font-size-adjust: 20pt; 
-        background-color: midnightblue; 
-        color: whitesmoke; 
+        background-color: rgb(255, 255, 255); 
+        color: rgb(255, 255, 0); 
         text-align: center; 
         border-width: 2pt; 
         border-color:black; 
         padding: 4pt;}
 
-        #DivBox {background-color:slategrey; 
+        #DivBox {background-color:rgb(255, 0, 0); 
         display: flex; 
         flex-direction: column; 
         flex-wrap: wrap;}
