--- a/css01c.html
+++ b/css01c.html
@@ -5,25 +5,25 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: whitesmoke;}
+        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: steelblue;}
 
-        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: whitesmoke;}
+        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: steelblue;}
 
         #PageTitle {font-size-adjust: 20pt; 
-        background-color: rgb(255, 255, 255); 
-        color: rgb(255, 255, 0); 
+        background-color: black; 
+        color: aquamarine; 
         text-align: center; 
         border-width: 2pt; 
-        border-color:black; 
+        border-color: antiquewhite; 
         padding: 4pt;}
 
-        #DivBox {background-color:rgb(255, 0, 0); 
+        #DivBox {background-color: darkgrey; 
         display: flex; 
         flex-direction: column; 
         flex-wrap: wrap;}
 
         .container {padding: 10pt; 
-            border: 2pt solid black;  
+            border: 2pt solid antiquewhite;  
             margin: 2pt;}
 
         </style>
