--- a/css01c.html
+++ b/css01c.html
@@ -5,19 +5,19 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: steelblue;}
+        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: darkgrey;}
 
-        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: steelblue;}
+        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: darkgrey;}
 
         #PageTitle {font-size-adjust: 20pt; 
         background-color: black; 
-        color: aquamarine; 
+        color: steelblue; 
         text-align: center; 
         border-width: 2pt; 
         border-color: antiquewhite; 
         padding: 4pt;}
 
-        #DivBox {background-color: darkgrey; 
+        #DivBox {background-color: steelblue; 
         display: flex; 
         flex-direction: column; 
         flex-wrap: wrap;}
