--- a/css01c.html
+++ b/css01c.html
@@ -11,19 +11,19 @@
 
         #PageTitle {font-size-adjust: 20pt; 
         background-color: black; 
-        color: steelblue; 
+        color: whitesmoke; 
         text-align: center; 
-        border-width: 2pt; 
+        border-width: 1pt; 
         border-color: antiquewhite; 
-        padding: 4pt;}
+        padding: 3pt;}
 
         #DivBox {background-color: steelblue; 
         display: flex; 
-        flex-direction: column; 
+        flex-direction:column-reverse; 
         flex-wrap: wrap;}
 
-        .container {padding: 10pt; 
-            border: 2pt solid antiquewhite;  
+        .container {padding: 5pt; 
+            border: 1pt solid antiquewhite;  
             margin: 2pt;}
 
         </style>
