--- a/css01c.html
+++ b/css01c.html
@@ -5,9 +5,9 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: darkgrey;}
+        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: rgb(78, 78, 78);}
 
-        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: darkgrey;}
+        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: rgb(78, 78, 78);}
 
         #PageTitle {font-size-adjust: 20pt; 
         background-color: black; 
@@ -19,7 +19,7 @@
 
         #DivBox {background-color: steelblue; 
         display: flex; 
-        flex-direction:column-reverse; 
+        flex-direction:column; 
         flex-wrap: wrap;}
 
         .container {padding: 5pt; 
