--- a/css01c.html
+++ b/css01c.html
@@ -45,6 +45,7 @@
                 This ride opened in 2005 at a cost of $25 million USD. Built by <b>Intamin Amusement Rides</b>, <i>Kingda Ka</i> uses a hydraulic launch to accelerate riders
                 up to its record-breaking heights and speeds. The attraction accends a giant vertical tower, with a 90 degree left-hand twist on the way up, and a 270 degree right-hand
                 spiral on its way down. The coaster quickly finishes with a large speed hill that doubles as a brake section.</p>
+                    <div id="StatsList" class="container">
                     <h3 class="header">Statistics</h3>
                         <ul>
                             <li>Maximum Height: 456ft/139m</li>
@@ -54,21 +55,25 @@
                             <li>Maximum Vertical Angle: 90 degrees</li>
                             <li>Duration: 50 seconds</li>
                         </ul>
+                    </div>
             <h2 class="header">Records & Reception</h2>
                 <p>This attraction opened with three world records. <i>Kingda Ka</i> took the world height, drop, and speed records from another Intamin hydraulic launch coaster that opened two years prior:
                     <i>Top Thrill Dragster</i> at Sandusky, Ohio's <B>Cedar Point</B>. The record-breaking coaster actually sparked controversy amongst roller coaster enthusiats when it was announced in 2004,
                     as the ride's layout is extremely similar to its Ohioan predecessor, just with slighly boosted stats and changing <i>Top Thrill's</i> flat braking runout to a 129ft tall speed/braking hill. Contoversial
                     or not, <i>Kingda Ka</i> remains an impressive feat of engineering, and though it has since lost its speed record, it doesn't look like its impressive height record will be beat anytime soon.</p>
+                    <div id="RecordsList" class="container">
                     <h3 class="header">World Records</h3>
                         <ul>
                             <li>Tallest Height on a Roller Coaster at 456ft: 2005-Present</li>
                             <li>Tallest Drop on a Roller Coaster at 418ft: 2005-Present</li>
                             <li>Fastest Roller Coaster at 128mph: 2005-2010</li>
                         </ul>
+                    </div>
             </div>
 
             <div id="Table" class="container">
 <h2 class="header"><a href="https://en.wikipedia.org/wiki/Amusement_Today#Golden_Ticket_Awards">Golden Ticket Awards:</a> Top Steel Roller Coasters</h2>
+<div id="ActualTable" class="container">
 <table>
     <tr> 
         <th>Year</th>
@@ -99,6 +104,7 @@
         <td>49</td>
     </tr>
 </table>
+    </div>
             </div>
 
             <div id="SubInfo" class="container">
