--- a/css01c.html
+++ b/css01c.html
@@ -7,7 +7,7 @@
         <style> 
         p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: rgb(110, 110, 110);}
 
-        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: rgb(110, 110, 110);}
+        h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: black;}
 
         #PageTitle {font-size-adjust: 20pt; 
         background-color: black; 
