--- a/css01c.html
+++ b/css01c.html
@@ -5,7 +5,7 @@
             Kingda Ka: The Tallest Coaster
         </title>
         <style> 
-        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: rgb(110, 110, 110);}
+        p {font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 16pt; color: black;}
 
         h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: black;}
 
