--- a/css01c.html
+++ b/css01c.html
@@ -11,7 +11,7 @@
 
         #PageTitle {font-size-adjust: 20pt; 
         background-color: black; 
-        color: whitesmoke; 
+        color: antiquewhite; 
         text-align: center; 
         border-width: 1pt; 
         border-color: antiquewhite; 
