--- a/css01c.html
+++ b/css01c.html
@@ -10,8 +10,8 @@
         h1, h2, h3 {font-family:'Courier New', Courier, monospace; color: black;}
 
         #PageTitle {font-size-adjust: 20pt; 
-        background-color: black; 
-        color: antiquewhite; 
+        background-color: antiquewhite; 
+        color: black; 
         text-align: center; 
         border-width: 1pt; 
         border-color: antiquewhite; 
