--- a/css01c.html
+++ b/css01c.html
@@ -14,7 +14,7 @@
         color: black; 
         text-align: center; 
         border-width: 1pt; 
-        border-color: antiquewhite; 
+        border-color: black; 
         padding: 3pt;}
 
         #DivBox {background-color: steelblue; 
