--- a/js01a.html
+++ b/js01a.html
@@ -27,6 +27,10 @@
                     margin: 2pt;}
 
         </style>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+        </script>
+
     </head>
     <body>
         <div id="DivBox">
@@ -102,8 +106,9 @@
             </div>
 
             <div id="SubInfo" class="container">
-<p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a></p>
-<p> See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
+<p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a>
+    <br>
+    See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
             </div>
         </div>
 </body>
