--- a/js01a.html
+++ b/js01a.html
@@ -106,7 +106,12 @@
             </div>
 
             <div id="SubInfo" class="container">
-<p> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a>
+
+<button id="SubInfo_Button">Click here to learn more about Kingda Ka.</button>
+
+
+
+                <p hidden id="subinfo_p"> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a>
     <br>
     See <i>Kingda Ka's</i> page on the <a href="https://www.sixflags.com/greatadventure/attractions/kingda-ka">Six Flags Great Adventure</a> website.</p>                                
             </div>
