--- a/js01a.html
+++ b/js01a.html
@@ -107,7 +107,7 @@
 
             <div id="SubInfo" class="container">
 
-<button id="SubInfo_Button">Click here to learn more about Kingda Ka.</button>
+<button id="SubInfo_Button">Click here to learn more about <i>Kingda Ka</i></button>
 
 
 
