--- a/js01a.html
+++ b/js01a.html
@@ -109,7 +109,11 @@
 
 <button id="SubInfo_Button">Click here to learn more about <i>Kingda Ka</i></button>
 
-
+<script>
+    $("button").click( function() {
+        $("#subinfo_p").show();
+    });
+</script>
 
                 <p hidden id="subinfo_p"> Much of the facts and figures here come from the entry for <i>Kingda Ka</i> on the <a href="https://rcdb.com/2832.htm">Roller Coaster Database.</a>
     <br>
