--- a/js01a.html
+++ b/js01a.html
@@ -111,7 +111,7 @@
 
 <script>
     $("button").click( function() {
-        $("#subinfo_p").show();
+        $("#subinfo_p").toggle();
     });
 </script>
 
