--- a/js01a.html
+++ b/js01a.html
@@ -38,7 +38,7 @@
         <h1 class="header">Kingda Ka: The Tallest Coaster</h1>
         </div>
         
-        <div id="Image" class="container">
+        <div hidden id="Image" class="container">
         <img width=600 height=450 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Kingda_Ka_%28Full_Layout%29.JPG/800px-Kingda_Ka_%28Full_Layout%29.JPG"> 
         <p>Image by: <a href="https://en.wikipedia.org/wiki/User:Coasterman1234">Coasterman1234</a> at English Wikipedia</p>
         </div>
